--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-googlemaps": "^2.3.3",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-googlemaps": "^2.4.6",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
@@ -54,7 +54,9 @@
     "plugins": {
       "cordova-plugin-googlemaps": {
         "API_KEY_FOR_ANDROID": "AIzaSyCi9VoDflZuQntCDOREy6iRgBq-7l3UBlM",
-        "API_KEY_FOR_IOS": "AIzaSyC4Q4Cm_wVKt8co5crhaMqdTvU2CsA_-kQ"
+        "API_KEY_FOR_IOS": "AIzaSyC4Q4Cm_wVKt8co5crhaMqdTvU2CsA_-kQ",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
